# appguard-server

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  firewall.json
.cargo/: config.toml
.github/workflows/: gitlab_mirror.yml  rust.yml
libappguard/: Cargo.toml
libappguard/src/: lib.rs
libappguard/src/proto/: appguard.rs  appguard_commands.rs  mod.rs
proto/: aiguard.proto  appguard.proto  commands.proto
src/: app_context.rs  app_guard_impl.rs  auth_handler.rs  config.rs  constants.rs  entrypoint.rs  error.rs  fetch_data.rs  grpc_impl.rs  helpers.rs  ip_info.rs  lib.rs  main.rs
src/ai/: entries.rs  helpers.rs  mod.rs
src/db/: datastore_wrapper.rs  device.rs  entries.rs  helpers.rs  mod.rs  tables.rs  views.rs
src/db/store/: denied_ip.rs  firewall.rs  http_request.rs  http_response.rs  ip_info.rs  latest_device_info.rs  mod.rs  smtp_request.rs  smtp_response.rs  store.rs  tcp_connection.rs
src/deserialize/: firewall_policy.rs
src/display/: http_request.rs  http_response.rs  mod.rs  smtp_request.rs  smtp_response.rs  tcp_connection.rs
src/firewall/: denied_ip.rs  firewall.rs  header_val.rs  infix_firewall.rs  mod.rs  rate_limit.rs  rules.rs
src/firewall/items/: http_request.rs  http_response.rs  ip_info.rs  mod.rs  smtp_request.rs  smtp_response.rs  tcp_connection.rs  tcp_info.rs
src/from_sql/: ai_result.rs  firewall_result.rs
src/http_proxy/: mod.rs
src/http_proxy/api/: authorize_device.rs  configure_ip_info_cache.rs  mod.rs  update_client_default_policy.rs  update_client_firewall.rs  update_client_timeout.rs  update_config.rs
src/http_proxy/utilities/: authorization.rs  request_handling.rs
src/orchestrator/: auth_request_handler.rs  client.rs  control_stream.rs  mod.rs  new_connection_handler.rs
src/proto/: aiguard.rs  appguard.rs  appguard_commands.rs  mod.rs
src/serialize/: firewall_policy.rs  mod.rs
src/to_sql/: ai_result.rs  firewall_result.rs  mod.rs
src/token_provider/: mod.rs
test_material/: blacklist_sample.sqlite  config_test_1.json  config_test_2.json  firewall_test_1.json  firewall_test_2.json
test_material/config/: config.json
test_material/firewall/: firewall.json
tests/: http.rs  smtp.rs  tcp.rs
tests/config/: mod.rs
tests/helpers/: mod.rs
tests/http_headers/: mod.rs
tests/http_request/: mod.rs
tests/http_request_ai/: mod.rs
tests/http_request_dataset/: mod.rs
tests/http_response/: mod.rs
tests/ip_info/: mod.rs
tests/rpc/: mod.rs
tests/smtp_headers/: mod.rs
tests/smtp_request/: mod.rs
tests/smtp_response/: mod.rs
tests/tcp_connection/: mod.rs
