[package]
name = "appguard-server"
version = "0.1.0"
edition = "2021"
#authors = []
description = "An application-level firewall designed to secure and control network traffic"
readme = "README.md"
#homepage = ""
repository = "https://github.com/NullNet-ai/appguard-server"
#documentation = ""
license = "MIT"
keywords = ["firewall", "network", "application", "centralized", "monitor"]
categories = ["network-programming"]
#include = []

[features]
default = ["no-tls", "no-ai"]
no-ai = []
no-tls = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
nullnet-libdatastore = "0.3.2"
nullnet-liblogging = "0.2.0"
nullnet-liberror = "0.1.1"
nullnet-libipinfo = "0.2.0"
nullnet-libtoken = "0.2.0"
serde = { version = "1.0.218", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.139"
tonic = { version = "0.13.0", features = ["_tls-any", "tls-native-roots"] }
prost = "0.13.5"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
notify = "8.0.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
log = "0.4.26"
rpn-predicate-interpreter = { git = "https://github.com/GyulyVGC/postfix-predicate-interpreter.git", branch = "appguard" }
indexmap = "2.7.1"

[build-dependencies]
tonic-build = "0.13.0"

[dev-dependencies]
serial_test = "3.2.0"

[badges]
maintenance = { status = "actively-developed" }
