[package]
name = "appguard-server"
version = "0.1.0"
edition = "2021"
#authors = []
description = "An application-level firewall designed to secure and control network traffic"
readme = "README.md"
#homepage = ""
repository = "https://github.com/NullNet-ai/appguard-server"
#documentation = ""
license = "AGPL-3.0-only"
keywords = ["firewall", "network", "application", "centralized", "monitor"]
categories = ["network-programming"]
#include = []

[features]
default = ["no-tls", "no-ai"]
no-ai = []
no-tls = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
nullnet-libdatastore = "0.4.8"
#nullnet-liblogging = "0.3.0"
nullnet-liberror = "0.1.1"
nullnet-libipinfo = "0.2.0"
nullnet-libtoken = "0.3.3"
serde = { version = "1.0.218", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.139"
tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
prost = "0.13.5"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
log = "0.4.26"
rpn-predicate-interpreter = { git = "https://github.com/GyulyVGC/postfix-predicate-interpreter.git", branch = "appguard" }
indexmap = "2.7.1"
actix-web = "4.11.0"
actix-cors = "0.7.1"
actix-ws = "0.3.0"
rand = "0.9.1"
rustls = "0.23.27"
tokio-rustls = "0.26.2"
webpki-roots = "1.0.0"
hyper = { version = "1.6.0", features = [ "client", "http1", "http2" ] }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1"] }
http-body-util = "0.1.3"
env_logger = "0.11.8"

[build-dependencies]
tonic-build = "0.13.1"

[dev-dependencies]
serial_test = "3.2.0"

[badges]
maintenance = { status = "actively-developed" }
