[package]
name = "appguard-server"
version = "0.1.0"
edition = "2021"
#authors = []
description = "An application-level firewall designed to secure and control network traffic"
readme = "README.md"
#homepage = ""
repository = "https://github.com/NullNet-ai/appguard-server"
#documentation = ""
license = "AGPL-3.0-only"
keywords = ["firewall", "network", "application", "centralized", "monitor"]
categories = ["network-programming"]
#include = []

[features]
default = ["no-tls", "no-ai"]
no-ai = []
no-tls = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
nullnet-libdatastore = "0.5.1"
#nullnet-liblogging = "0.3.0"
nullnet-liberror = "0.1.1"
nullnet-libipinfo = "0.2.0"
nullnet-libtoken = "0.3.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
prost = "0.13.5"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
log = "0.4.26"
rpn-predicate-interpreter = { git = "https://github.com/GyulyVGC/postfix-predicate-interpreter.git", branch = "appguard" }
indexmap = "2.7.1"
actix-web = "4.12.1"
actix-cors = "0.7.1"
rand = "0.9.1"
env_logger = "0.11.8"
async-trait = "0.1.88"
ipnetwork = "0.21.1"

[build-dependencies]
tonic-build = "0.13.1"

[dev-dependencies]
#serial_test = "3.2.0"

[badges]
maintenance = { status = "actively-developed" }
