[package]
name = "nullnet-libappguard"
version = "0.1.4"
edition = "2024"
authors = ["Giuliano Bellini <gyulyvgc99@gmail.com>", "Anton Liashkevich <anton.liashkevich.eng@gmail.com>"]
description = "An application-level firewall designed to secure and control network traffic"
readme = "../README.md"
#homepage = ""
repository = "https://github.com/NullNet-ai/appguard-server"
#documentation = ""
license = "MIT"
keywords = ["firewall", "network", "application", "centralized", "monitor"]
categories = ["network-programming"]
#include = []

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
tonic = { version = "0.13.0", features = ["_tls-any", "tls-native-roots"] }
prost = "0.13.5"
tokio = "1.44.2"
serde = { version = "1.0.219", features = ["derive"] }
#log = "0.4.26"

[badges]
maintenance = { status = "actively-developed" }
